# serve-lib

./: .dockerignore  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
crates/serve-lib-cli/: Cargo.toml
crates/serve-lib-cli/src/: main.rs
crates/serve-lib-core/: Cargo.toml
crates/serve-lib-core/src/: bind.rs  config.rs  duration.rs  error.rs  events.rs  lib.rs  registry.rs  route.rs  static_files.rs  tls.rs  types.rs
crates/serve-lib-daemon/: Cargo.toml
crates/serve-lib-daemon/src/: control.rs  lib.rs  runtime.rs  state.rs
docs/: agent-guide.md  architecture.md  codelabs.md  design.md  feature-requirements.md  implementation-plan.md  tasks.md
tests/e2e/: Dockerfile  docker-compose.yml  run.sh
