[workspace]
members = [
    "crates/serve-lib-core",
    "crates/serve-lib-daemon",
    "crates/serve-lib-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Shuozeli/serve-lib"
rust-version = "1.82"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = "0.23"
rustls-pemfile = "2.2"
pulldown-cmark = "0.13.4"
syntect = "5.3.0"
thiserror = "2.0"
tempfile = "3.26"
toml = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }
clap = { version = "4.5", features = ["derive"] }
rcgen = "0.13"
