[package]
name = "serve-lib-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
