[package]
name = "serve-lib-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serve-lib-core = { path = "../serve-lib-core" }
syntect.workspace = true

[dev-dependencies]
rcgen.workspace = true
tempfile.workspace = true
